﻿2003-12-11  Patrik Torstensson  <p@rxc.se>

	* SoapMessageFormater.cs: Use GetMethod with signature if possible, solves
          AmbiguousMatchException for bug 51990.
 
2003-12-10  Lluis Sanchez Gual  <lluis@ximian.com>

	* BinaryServerFormatterSinkProvider.cs: Removed TODO.
	* CommonTransportKeys.cs: Added some internal transport keys.

2003-11-21  Lluis Sanchez Gual  <lluis@ximian.com>

	* BinaryClientFormatterSinkProvider.cs, BinaryServerFormatterSinkProvider.cs,
	  BinaryCore.cs, BinaryServerFormatterSinkProvider.cs,
	  SoapClientFormatterSinkProvider.cs, SoapCore.cs, 
	  SoapServerFormatterSinkProvider.cs.cs: Added support for TypeFilterLevel
	  property.
	
2003-11-17  Lluis Sanchez Gual  <lluis@ximian.com>

	* BinaryClientFormatterSinkProvider.cs, BinaryServerFormatterSinkProvider.cs:
	  SoapClientFormatterSinkProvider.cs, SoapServerFormatterSinkProvider.cs: Small fix.
	* SoapServerFormatterSink.cs: Small fix in AsyncProcessResponse.
	* BinaryCore.cs, SoapCore.cs: throw an exception if an unknown property
	  is found.
	
2003-11-16  Lluis Sanchez Gual  <lluis@ximian.com>

	* BinaryClientFormatterSink.cs, BinaryClientFormatterSinkProvider.cs,
	  BinaryServerFormatterSink.cs, BinaryServerFormatterSinkProvider.cs:
	  Moved formatter code to BinaryCore. This adds support for the properties
	  "includeVersion" and "strictBinding" to the binary formatter.
	* BinaryCore.cs: New file. Contains some code used by the binary formatter sinks.
	* SoapClientFormatterSink.cs, SoapClientFormatterSinkProvider.cs,
	  SoapServerFormatterSink.cs, SoapServerFormatterSinkProvider.cs
	  Moved formatter code to BinaryCore. This adds support for the properties
	  "includeVersion" and "strictBinding" to the soap formatter.
	* SoapCore.cs: New file. Contains some code used by the soap formatter sinks.
	* ChannelCore.cs: New file. Implements a simple type binder used by the
	  formatter sinks.

2003-11-12  Lluis Sanchez Gual  <lluis@ximian.com>
